# SushiGoNN

./: 10_games_in_10_generations_11.txt  10_games_in_10_generations_12.txt  10_games_in_10_generations_17.txt  10_games_in_10_generations_26.txt  10_games_in_10_generations_29.txt  10_games_in_10_generations_31.txt  10_games_in_10_generations_37.txt  10_games_in_10_generations_9.txt  Cargo.toml  LICENSE
src/: competition.rs  gen_algorithm.rs  main.rs
src/neural_network_game/: mod.rs  model_a.rs  model_b.rs  model_c.rs  neural_network.rs
src/neural_network_game/game/: mod.rs  score.rs
src/neural_network_game/game/player/: card.rs  mod.rs
